dark mode: Topviews: month color fix

--- a/stylesheets/_shared.scss
+++ b/stylesheets/_shared.scss
@@ -587,7 +587,8 @@ footer {
         background: #444;
     }
 
-    .topview-entry--rank-wrapper {
+    .topview-entry--rank-wrapper,
+    .month {
         color: #000;
     }
     .topview-entry--label a,
